--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 <body>
     <header></header>
     <main>
-        <div>
+        <div class="content">
             <h2>Kristoffer Sæth Kvam</h2>
             <h1>Computer Science Student</h1>
             <h2>OsloMet University</h2>    
         </div>
-        <div>
-            <img src="./Images/Github-icon.png" alt="Profile Picture">
-            <p>kristoffer.seth.kvam@gmail.com</p>
-            <a href="https://www.linkedin.com/in/kristoffer-kvam-02049a274/"><img src="./Images/Linkedin-icon.png" alt="Linkedin"></a>
-            <a href="https://github.com/kristofferskvam"><img src="./Images/Github-icon.png" alt="Github"></a>
+        <div class="content">
+            <img src="./Images/Profile-picture.jpg" id="profile-picture" alt="Profile Picture">
+            <p id="mail">kristoffer.seth.kvam@gmail.com</p>
+            <div id="info">
+                <a href="https://www.linkedin.com/in/kristoffer-kvam-02049a274/"><img src="./Images/Linkedin-icon.png" alt="Linkedin"></a>
+                <a href="https://github.com/kristofferskvam"><img src="./Images/Github-icon.png" alt="Github"></a>    
+            </div>
         </div>
-        <div>
+        <div class="content">
             <p>I am a computer science student who graduates in June 2025.</p>
             <p>My areas of expertise include web-developement with API-solutions using a variety of frameworks such as .NET and Node js.</p>
             <p>Developing internal search engine using web scrapers and elasticsearch.</p>    
