--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kristoffer Kvam Portfolio</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="portfolio.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <nav>
+            <a href="https://www.linkedin.com/in/kristoffer-kvam-02049a274/"><img src="./Images/Linkedin-icon.png" alt="Linkedin"></a>
+            <a href="https://github.com/kristofferskvam"><img src="./Images/Github-icon.png" alt="Github"></a>
+        </nav>
+    </header>
     <main>
         <div class="content">
             <h2>Kristoffer Sæth Kvam</h2>
@@ -16,16 +21,17 @@
         </div>
         <div class="content">
             <img src="./Images/Profile-picture.jpg" id="profile-picture" alt="Profile Picture">
-            <p id="mail">kristoffer.seth.kvam@gmail.com</p>
-            <div id="info">
-                <a href="https://www.linkedin.com/in/kristoffer-kvam-02049a274/"><img src="./Images/Linkedin-icon.png" alt="Linkedin"></a>
-                <a href="https://github.com/kristofferskvam"><img src="./Images/Github-icon.png" alt="Github"></a>    
-            </div>
         </div>
         <div class="content">
             <p>I am a computer science student who graduates in June 2025.</p>
             <p>My areas of expertise include web-developement with API-solutions using a variety of frameworks such as .NET and Node js.</p>
-            <p>Developing internal search engine using web scrapers and elasticsearch.</p>    
+            <p>Developing internal search engine using web scrapers and elasticsearch.</p>
+        </div>
+        <div class="content">
+            <p>Check out my projects on Github or get in contact via Email or Linkedin:</p>
+            <a href="https://www.linkedin.com/in/kristoffer-kvam-02049a274/"><img src="./Images/Linkedin-icon.png" alt="Linkedin"></a>
+            <a href="https://github.com/kristofferskvam"><img src="./Images/Github-icon.png" alt="Github"></a>
+            <p>kristoffer.seth.kvam@gmail.com</p>
         </div>
     </main>
     <footer></footer>
